--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    password: Y3llapragad@
+    password: root
     url: jdbc:mysql://localhost:3306/sbms_proj
     username: root
   jpa:
