--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     password: root
-    url: jdbc:mysql://localhost:3306/sbms_proj
+    url: jdbc:mysql://mysqldb:3306/sbms_proj
     username: root
   jpa:
     database-platform: org.hibernate.dialect.MySQL8Dialect
